# heroex

./: .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yaml  heroku.yml  package-lock.json
backend/: Dockerfile.web  db.sqlite  entrypoint-prod.sh  entrypoint.sh  pyproject.toml
backend/authentication/: admin.py  models.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_user_balance.py  0004_userfootballer_user_footballers_user_week_and_more.py  0005_alter_userfootballer_unique_together.py  0006_alter_userfootballer_amount.py  0007_alter_userfootballer_amount.py  0008_userfootballer_trade_price.py  0009_usertradelog.py  0010_usertradelog_amount.py  0011_usertradelog_reward.py  0012_gameresultslog.py  0013_gameresultslog_game_number_user_game_number.py  0014_user_reward.py
backend/authentication/static/js/: main.js
backend/authentication/templates/: index.html
backend/dumps/: dump_06_06_22.json  dump_23_05_2022.json  dump_24_05_2022.json  dump_26_05_2022.json  dump_30_05_2022.json
backend/gameweek/: apps.py  urls.py  views.py
backend/server/: prod_settings.py  settings.py  urls.py
backend/server/templates/: index.html
backend/stock/: admin.py  models.py  serializers.py  urls.py  views.py
backend/stock/migrations/: 0001_initial.py  0002_footballerweeksdata_hix.py  0003_footballerposition_footballerteam_and_more.py  0004_footballer_price_dynamic.py  0005_weekindexmodel.py
backend/userprofile/: serializers.py  urls.py  views.py
frontend/: Dockerfile.ui  (+5 more)
(+19 files in other folders)
