[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["riisatoro <riisa.toro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
django-rest-framework = "^0.1.0"
drf-spectacular = "^0.22.1"
psycopg2-binary = "^2.9.3"
django-database-url = "^1.0.3"
djangorestframework-simplejwt = "^5.1.0"
whitenoise = "^6.1.0"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
